--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Olika projekt jag har gjort under utbildningen.</h2>
-						<p>"Gott och blandat" mellan HTML, CSS3, JAVASCRIPT, REACT, Github</p>
+						<h2>Olika projekt som jag har gjort under utbildningen.</h2>
+						<p>"Gott och blandat" mellan HTML, CSS3(SASS, LESS, BOOTSTRAP), JAVASCRIPT,JQUERY , REACT, Github, GIT, UX/UI(FIGMA)</p>
+						<p>Har också arbetat med agil metodik SCRUM.  </p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -147,30 +148,7 @@
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
 					</header>
 					<div class="row">
-						<div class="col-12">
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
-									</div>
-									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
-											<li><input type="reset" value="Clear Form" class="alt" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
-						</div>
+						
 						<div class="col-12">
 							<hr />
 							<h3>Find me on ...</h3>
